--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,9 @@
 = knife-cosmic
 
-{<img src="https://codeclimate.com/github/cosmic-extras/knife-cosmic.png" />}[https://codeclimate.com/github/cosmic-extras/knife-cosmic]
-{<img src="https://gemnasium.com/cosmic-extras/knife-cosmic.png" alt="Dependency Status" />}[https://gemnasium.com/cosmic-extras/knife-cosmic]
-
 == DESCRIPTION:
 
-This is the Edmunds Knife plugin for cosmic. This plugin gives Knife the ability to create, bootstrap and manage
-cosmic instances.
+This is the Knife plugin for cosmic. This plugin gives Knife the ability to create, bootstrap and manage
+cosmic instances. This has been forked off of knife-cloudstack.
 
 == INSTALLATION:
 This plugin is distributed as a Ruby Gem. To install it, run:
@@ -70,7 +67,7 @@ The data displayed is based on first result returned in your output. You can get
 Provisions a new server in cosmic and then performs a Chef bootstrap (using the SSH protocol).  The goal of the bootstrap is to get Chef installed on the target
 system so it can run Chef Client with a Chef Server. The main assumption is a baseline OS installation exists (provided by the provisioning). It is primarily
 intended for Chef Client systems that talk to a Chef server.  By default the server is bootstrapped using the 'chef-full' template (default bootstrap option for knife,
-(Ref. http://docosmic.opscode.com/knife_bootstrap.html). This can be overridden using the <tt>-d</tt> or <tt>--template-file</tt> command options.
+(Ref. <removed>). This can be overridden using the <tt>-d</tt> or <tt>--template-file</tt> command options.
 VM provided with <tt>--no-bootstrap</tt> option have no forwarded ports or forwared ip rules (in case <tt>--static-nat</tt> is used).
 
 By default, new servers are allocated a public IP address mapping to the cosmic private IP address. If you do not want this behavior, pass the <tt>--no-public-ip</tt> option.
@@ -97,7 +94,7 @@ private port 25 can be stated as simply <tt>25</tt>. A list of such rules for a 
 
 ==== IP forwarding rules
 The <tt>--ipfwd-rules</tt> option takes a comma separated list of ip forwarding rules. These rules are created on public ip appdress assigned obtained with <tt>--static-nat</tt> option.
-(Ref. http://cosmic.apache.org/docosmic/api/apidocosmic-4.0.0/root_admin/createIpForwardingRule.html)
+(Ref. <removed>)
 
 Ip forwarding rules have the syntax <tt>START_PORT[:END_PORT[:PROTOCOL]]</tt>. <tt>END_PORT</tt> and <tt>PROTOCOL</tt> are optional.
 The default value of <tt>END_PORT</tt> is <tt>START_PORT</tt> and the default <tt>PROTOCOL</tt> is 'TCP'.
